feat(programmes, volunteer): make 2 pages mobile-friendly

--- a/index.html
+++ b/index.html
@@ -1,48 +1,96 @@
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>UPStars</title>
-        <link rel="stylesheet" href="./01 Generic.css">
-        <link rel="stylesheet" href="./02 NavBar.css">
-        <link rel="stylesheet" href="./03 HeroBanner.css">
-        <link rel="stylesheet" href="./04 Persona.css">
-        <link rel="stylesheet" href="./05 CTA.css">
-        <link rel="stylesheet" href="./06 Overview.css">
-        <link rel="stylesheet" href="./07 Content.css">
+        <link rel="stylesheet" href="./01 Generic.css" />
+        <link rel="stylesheet" href="./02 NavBar.css" />
+        <link rel="stylesheet" href="./03 HeroBanner.css" />
+        <link rel="stylesheet" href="./04 Persona.css" />
+        <link rel="stylesheet" href="./05 CTA.css" />
+        <link rel="stylesheet" href="./06 Overview.css" />
+        <link rel="stylesheet" href="./07 Content.css" />
         <script src="javascript.js"></script>
     </head>
 
     <body>
         <div class="NavFrame">
-            <img class="NavLogo" src="assets/placeholder_logo_on_dark_blue_background.png">
-            <div class="NavButton" onclick="location.href='./index.html'">Home</div>
-            <div class="NavButton" onclick="location.href='./story.html'">Our Story</div>
-            <div class="NavButton" onclick="location.href='./programmes.html'">Our Programmes</div>
-            <div class="NavButton" onclick="location.href='./volunteer.html'">Volunteer with Us</div>
-            <div class="NavButton" onclick="location.href='./signup.html'">Sign Up</div>
+            <img
+                class="NavLogo"
+                src="assets/placeholder_logo_on_dark_blue_background.png"
+            />
+            <div class="NavButton" onclick="location.href='./index.html'">
+                Home
+            </div>
+            <div class="NavButton" onclick="location.href='./story.html'">
+                Our Story
+            </div>
+            <div class="NavButton" onclick="location.href='./programmes.html'">
+                Our Programmes
+            </div>
+            <div class="NavButton" onclick="location.href='./volunteer.html'">
+                Volunteer with Us
+            </div>
+            <div class="NavButton" onclick="location.href='./signup.html'">
+                Sign Up
+            </div>
             <div class="NavButton HamIcon" onclick="toggleHamburger()">三</div>
         </div>
 
         <div class="HamburgerMenu">
-            <div class="NavButton HamOpt" onclick="location.href='./index.html'">Home</div><br>
-            <div class="NavButton HamOpt" onclick="location.href='./story.html'">Our Story</div><br>
-            <div class="NavButton HamOpt" onclick="location.href='./programmes.html'">Our Programmes</div><br>
-            <div class="NavButton HamOpt" onclick="location.href='./volunteer.html'">Volunteer with Us</div><br>
-            <div class="NavButton HamOpt" onclick="location.href='./signup.html'">Sign Up</div>
+            <div
+                class="NavButton HamOpt"
+                onclick="location.href='./index.html'"
+            >
+                Home
+            </div>
+            <br />
+            <div
+                class="NavButton HamOpt"
+                onclick="location.href='./story.html'"
+            >
+                Our Story
+            </div>
+            <br />
+            <div
+                class="NavButton HamOpt"
+                onclick="location.href='./programmes.html'"
+            >
+                Our Programmes
+            </div>
+            <br />
+            <div
+                class="NavButton HamOpt"
+                onclick="location.href='./volunteer.html'"
+            >
+                Volunteer with Us
+            </div>
+            <br />
+            <div
+                class="NavButton HamOpt"
+                onclick="location.href='./signup.html'"
+            >
+                Sign Up
+            </div>
         </div>
 
         <div class="HeroFrame">
-            <img class="HeroImage" src="assets/a_community_bringing_opportunities.webp">
-            <p class="HeroHeader">A <strong>community</strong> bringing <strong>opportunities</strong></p>
+            <img
+                class="HeroImage"
+                src="assets/a_community_bringing_opportunities.webp"
+            />
+            <p class="HeroHeader">
+                A <strong>community</strong> bringing
+                <strong>opportunities</strong>
+            </p>
             <p class="HeroSubheader">Welcome to Ulu Pandan Stars (UPStars)!</p>
         </div>
 
         <div class="PersonaFrame">
-            <br>
+            <br />
             <p class="PersonaHeader">I am a...</p>
-            <br>
+            <br />
             <div class="PersonaButton"><text>Volunteer</text></div>
             <div class="PersonaButton"><text>Student</text></div>
             <div class="PersonaButton"><text>Partner</text></div>
@@ -51,75 +99,69 @@
         <div class="OverviewV1Frame">
             <div>
                 <p class="OverviewHeader">Our Story</p>
-                <p class="OverviewText">story1
-                    noun
-                    1.
-                    an account of imaginary or real people and events told for entertainment.
-                    "an adventure story"
-                    Similar:
-                    tale
-                    narrative
-                    account
-                    recital
-                    anecdote
-                    chronicle
-                    history
-                    yarn
-                    spiel
-                    2.
-                    an account of past events in someone's life or in the development of something.
-                    "the story of modern farming"</p>
+                <p class="OverviewText">
+                    story1 noun 1. an account of imaginary or real people and
+                    events told for entertainment. "an adventure story" Similar:
+                    tale narrative account recital anecdote chronicle history
+                    yarn spiel 2. an account of past events in someone's life or
+                    in the development of something. "the story of modern
+                    farming"
+                </p>
             </div>
-            <img class="OverviewImage" src="assets/story.jpg">
+            <img class="OverviewImage" src="assets/story.jpg" />
         </div>
 
         <div class="OverviewV2Frame">
-            <img class="OverviewImage" src="assets/programmes.png">
+            <img class="OverviewImage" src="assets/programmes.png" />
             <div>
                 <p class="OverviewHeader">Our Programmes</p>
-                <p class="OverviewText">Meet John, one of UPStars’ tutees. Since Primary 2, he has been a part of our Reading Classes and One-to-One tutoring sessions. Now, he is about embark on his first year in ITE. Learn more about the programmes that helped John along his success story. </p>
+                <p class="OverviewText">
+                    Meet John, one of UPStars’ tutees. Since Primary 2, he has
+                    been a part of our Reading Classes and One-to-One tutoring
+                    sessions. Now, he is about embark on his first year in ITE.
+                    Learn more about the programmes that helped John along his
+                    success story.
+                </p>
             </div>
         </div>
 
         <div class="OverviewV2Frame special">
             <div>
                 <p class="OverviewHeader">Our Programmes</p>
-                <p class="OverviewText">Meet John, one of UPStars’ tutees. Since Primary 2, he has been a part of our Reading Classes and One-to-One tutoring sessions. Now, he is about embark on his first year in ITE. Learn more about the programmes that helped John along his success story. </p>
+                <p class="OverviewText">
+                    Meet John, one of UPStars’ tutees. Since Primary 2, he has
+                    been a part of our Reading Classes and One-to-One tutoring
+                    sessions. Now, he is about embark on his first year in ITE.
+                    Learn more about the programmes that helped John along his
+                    success story.
+                </p>
             </div>
-            <img class="OverviewImage" src="assets/programmes.png">
+            <img class="OverviewImage" src="assets/programmes.png" />
         </div>
 
         <div class="OverviewV1Frame">
             <div>
                 <p class="OverviewHeader">Volunteer with Us</p>
-                <p class="OverviewText">volunteer
-                    /ˌvɒlənˈtɪə/
-                    noun
-                    1.
-                    a person who freely offers to take part in an enterprise or undertake a task.
-                    "a call for volunteers to act as foster-parents"
-                    Similar:
-                    subject
-                    participant
-                    case
-                    client
-                    patient
-                    guinea pig
-                    2.
-                    a person who works for an organization without being paid.
-                    "the railway is operated solely by volunteers"
-                    </p>
+                <p class="OverviewText">
+                    volunteer /ˌvɒlənˈtɪə/ noun 1. a person who freely offers to
+                    take part in an enterprise or undertake a task. "a call for
+                    volunteers to act as foster-parents" Similar: subject
+                    participant case client patient guinea pig 2. a person who
+                    works for an organization without being paid. "the railway
+                    is operated solely by volunteers"
+                </p>
             </div>
-            <img class="OverviewImage" src="assets/volunteer.jpeg">
+            <img class="OverviewImage" src="assets/volunteer.jpeg" />
         </div>
 
         <div class="CTAFrame">
-            <p class="CTAHeader">Are you ready to commit to making a tangible difference?</p>
+            <p class="CTAHeader">
+                Are you ready to commit to making a tangible difference?
+            </p>
             <div class="CTAButtonCumEnderWrapper">
                 <text class="CTAButton">Volunteer with us</text>
                 <text class="CTAEnder">today!</text>
             </div>
         </div>
-
     </body>
 </html>
