--- a/volunteer.html
+++ b/volunteer.html
@@ -1,48 +1,103 @@
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>UPStars</title>
-        <link rel="stylesheet" href="./01 Generic.css">
-        <link rel="stylesheet" href="./02 NavBar.css">
-        <link rel="stylesheet" href="./03 HeroBanner.css">
-        <link rel="stylesheet" href="./07 Content.css">
-        <link rel="stylesheet" href="./12 Volunteer.css">
+        <link rel="stylesheet" href="./01 Generic.css" />
+        <link rel="stylesheet" href="./02 NavBar.css" />
+        <link rel="stylesheet" href="./03 HeroBanner.css" />
+        <link rel="stylesheet" href="./07 Content.css" />
+        <link rel="stylesheet" href="./12 Volunteer.css" />
         <script src="javascript.js"></script>
     </head>
 
     <body>
         <div class="NavFrame">
-            <img class="NavLogo" src="assets/placeholder_logo_on_dark_blue_background.png">
-            <div class="NavButton" onclick="location.href='./index.html'">Home</div>
-            <div class="NavButton" onclick="location.href='./story.html'">Our Story</div>
-            <div class="NavButton" onclick="location.href='./programmes.html'">Our Programmes</div>
-            <div class="NavButton" onclick="location.href='./volunteer.html'">Volunteer with Us</div>
-            <div class="NavButton" onclick="location.href='./signup.html'">Sign Up</div>
+            <img
+                class="NavLogo"
+                src="assets/placeholder_logo_on_dark_blue_background.png"
+            />
+            <div class="NavButton" onclick="location.href='./index.html'">
+                Home
+            </div>
+            <div class="NavButton" onclick="location.href='./story.html'">
+                Our Story
+            </div>
+            <div class="NavButton" onclick="location.href='./programmes.html'">
+                Our Programmes
+            </div>
+            <div class="NavButton" onclick="location.href='./volunteer.html'">
+                Volunteer with Us
+            </div>
+            <div class="NavButton" onclick="location.href='./signup.html'">
+                Sign Up
+            </div>
             <div class="NavButton HamIcon" onclick="toggleHamburger()">三</div>
         </div>
 
         <div class="HamburgerMenu">
-            <div class="NavButton HamOpt" onclick="location.href='./index.html'">Home</div><br>
-            <div class="NavButton HamOpt" onclick="location.href='./story.html'">Our Story</div><br>
-            <div class="NavButton HamOpt" onclick="location.href='./programmes.html'">Our Programmes</div><br>
-            <div class="NavButton HamOpt" onclick="location.href='./volunteer.html'">Volunteer with Us</div><br>
-            <div class="NavButton HamOpt" onclick="location.href='./signup.html'">Sign Up</div>
+            <div
+                class="NavButton HamOpt"
+                onclick="location.href='./index.html'"
+            >
+                Home
+            </div>
+            <br />
+            <div
+                class="NavButton HamOpt"
+                onclick="location.href='./story.html'"
+            >
+                Our Story
+            </div>
+            <br />
+            <div
+                class="NavButton HamOpt"
+                onclick="location.href='./programmes.html'"
+            >
+                Our Programmes
+            </div>
+            <br />
+            <div
+                class="NavButton HamOpt"
+                onclick="location.href='./volunteer.html'"
+            >
+                Volunteer with Us
+            </div>
+            <br />
+            <div
+                class="NavButton HamOpt"
+                onclick="location.href='./signup.html'"
+            >
+                Sign Up
+            </div>
         </div>
 
         <div class="HeroFrame">
-            <img class="HeroImage" src="assets/a_community_bringing_opportunities.webp">
+            <img
+                class="HeroImage"
+                src="assets/a_community_bringing_opportunities.webp"
+            />
             <p class="HeroHeader alt"><strong>Volunteer with Us</strong></p>
-            <p class="HeroSubheader alt">Join us today to make a difference and give back to society!</p>
+            <p class="HeroSubheader alt">
+                Join us today to make a difference and give back to society!
+            </p>
         </div>
 
         <div class="ContentHeader">Why volunteer with us?</div>
-        <br>
-        <p class="VolunteerMainDescription">Volunteers are UPSTAR’s most valuable resource. We are looking for dedicated volunteers who are keen to learn more about the challenges students in underserved families are facing and are keen to develop their personal competencies. </p>
-        <br>
-        <p class="VolunteerMainDescription">Volunteers are assisted by a dedicated team of Mentors who share their experiences and guide volunteers through difficult situations.</p>
-        <br><br><br>
+        <br />
+        <p class="VolunteerMainDescription">
+            Volunteers are UPSTAR’s most valuable resource. We are looking for
+            dedicated volunteers who are keen to learn more about the challenges
+            students in underserved families are facing and are keen to develop
+            their personal competencies.
+        </p>
+        <br />
+        <p class="VolunteerMainDescription">
+            Volunteers are assisted by a dedicated team of Mentors who share
+            their experiences and guide volunteers through difficult situations.
+        </p>
+        <br /><br /><br />
 
         <div class="VolunteerSwitchTab" onclick="toggleSwitchTab()">
             <div class="VolunteerTab active" id="tutoring">Tutoring</div>
@@ -54,24 +109,43 @@
             <div class="VolunteerTutorCommitmentsFrame">
                 <div class="VolunteerTutorCommitmentSingular">
                     <div class="VolunteerTCSImageFrame">
-                        <img class="VolunteerTCSImage" src="assets/ic_fluent_calendar_rtl_24_filled.png">
+                        <img
+                            class="VolunteerTCSImage"
+                            src="assets/ic_fluent_calendar_rtl_24_filled.png"
+                        />
                     </div>
                     <p class="VolunteerTCSHeader">12 MONTHS</p>
-                    <p class="VolunteerTCSContent">Tutors are expected to commit for a period of 12 months, in order to build rapport with students.</p>
+                    <p class="VolunteerTCSContent">
+                        Tutors are expected to commit for a period of 12 months,
+                        in order to build rapport with students.
+                    </p>
                 </div>
                 <div class="VolunteerTutorCommitmentSingular">
                     <div class="VolunteerTCSImageFrame">
-                        <img class="VolunteerTCSImage" src="assets/ic_fluent_checkbox_person_24_filled.png">
+                        <img
+                            class="VolunteerTCSImage"
+                            src="assets/ic_fluent_checkbox_person_24_filled.png"
+                        />
                     </div>
                     <p class="VolunteerTCSHeader">ROLE MODELS</p>
-                    <p class="VolunteerTCSContent">Tutors are expected to be role models - big brother and sister figures, to impart good learning attitudes and good social behaviour.</p>
+                    <p class="VolunteerTCSContent">
+                        Tutors are expected to be role models - big brother and
+                        sister figures, to impart good learning attitudes and
+                        good social behaviour.
+                    </p>
                 </div>
                 <div class="VolunteerTutorCommitmentSingular">
                     <div class="VolunteerTCSImageFrame">
-                        <img class="VolunteerTCSImage" src="assets/ic_fluent_gantt_chart_24_filled.png">
+                        <img
+                            class="VolunteerTCSImage"
+                            src="assets/ic_fluent_gantt_chart_24_filled.png"
+                        />
                     </div>
                     <p class="VolunteerTCSHeader">80% ATTENDANCE</p>
-                    <p class="VolunteerTCSContent">Tutors are expected to maintain a minimum 80% attendance rate to facilitate planning and minimize disruption in the students' learning.
+                    <p class="VolunteerTCSContent">
+                        Tutors are expected to maintain a minimum 80% attendance
+                        rate to facilitate planning and minimize disruption in
+                        the students' learning.
                     </p>
                 </div>
             </div>
@@ -79,50 +153,76 @@
 
         <div class="VolunteerSwitchPage inactive" id="projects_page">
             <div class="VolunteerSPHeader">Other Projects</div>
-            <br>
+            <br />
             <div class="VolunteerProjectsGrid">
                 <div class="VolunteerProjectsGridColumn">
                     <p class="VolunteerPGCContent">
-                        We are also looking for volunteers with unique skillsets to be a part of this dynamic community and assist in projects to improve our operations.
+                        We are also looking for volunteers with unique skillsets
+                        to be a part of this dynamic community and assist in
+                        projects to improve our operations.
                     </p>
                 </div>
                 <div class="VolunteerProjectsGridColumn">
                     <p class="VolunteerPGCContent LA">
-                        <strong>&lt/&gt</strong> web development and programming<br>
-                        <strong>&lt/&gt</strong> marketing and social media<br>
+                        <strong>&lt/&gt</strong> web development and
+                        programming<br />
+                        <strong>&lt/&gt</strong> marketing and social media<br />
                         <strong>&lt/&gt</strong> digital design
                     </p>
-                </div>    
+                </div>
             </div>
-            <p class="VolunteerPGCContent CA">Do you have a project you would like to trial?</p>
+            <p class="VolunteerPGCContent CA">
+                Do you have a project you would like to trial?
+            </p>
             <div class="VolunteerProjectsGrid">
                 <div class="VolunteerProjectsGridColumn">
-                    <p class="VolunteerPGCContent">
+                    <div class="VolunteerPGCContent">
                         Download this proposal template:
-                        <div class="VolunteerActionButton RA">Proposal Template</div>
-                    </p>
+                        <div class="VolunteerActionButton RA">
+                            Proposal Template
+                        </div>
+                    </div>
                 </div>
                 <div class="VolunteerProjectsGridColumn">
-                    <p class="VolunteerPGCContent LA">
+                    <div class="VolunteerPGCContent LA">
                         And get in touch with us at:
                         <div class="VolunteerActionButton">Email Address</div>
-                    </p>
-                </div>    
+                    </div>
+                </div>
             </div>
         </div>
 
-        <br><br>
+        <br /><br />
 
         <div class="VolunteerSPHeader">Frequently Asked Questions</div>
-        <div class="VolunteerFAQQuestion">What details can I submit to my school for community service records?</div>
-        <div class="VolunteerFAQAnswer">Title of Program: UP Stars<br>
-            Venue: Block 3 Ghim Moh Road<br>
-            Organization: Ulu Pandan PAP Foundation Centre (PCF) and Citizen Consultative Committee (CCC).</div>
-        <div class="VolunteerFAQQuestion">Will I be able to get a letter of recognition?</div>
-        <div class="VolunteerFAQAnswer">Yes all our tutors will get a letter of recognition that endorses the number of hours committed to UPSTARS. For tutors with outstanding contributions, testimonials can be written as acknowledgement.</div>
-        <div class="VolunteerFAQQuestion">I stay in a hostel and I have a curfew. Will UPSTARS provide me with a letter of excuse?</div>
-        <div class="VolunteerFAQAnswer">Yes. Please provide details to whom the letter should be addressed and the name of your hostel.</div>
+        <div class="VolunteerFAQQuestion">
+            What details can I submit to my school for community service
+            records?
+        </div>
+        <div class="VolunteerFAQAnswer">
+            Title of Program: UP Stars<br />
+            Venue: Block 3 Ghim Moh Road<br />
+            Organization: Ulu Pandan PAP Foundation Centre (PCF) and Citizen
+            Consultative Committee (CCC).
+        </div>
+        <div class="VolunteerFAQQuestion">
+            Will I be able to get a letter of recognition?
+        </div>
+        <div class="VolunteerFAQAnswer">
+            Yes all our tutors will get a letter of recognition that endorses
+            the number of hours committed to UPSTARS. For tutors with
+            outstanding contributions, testimonials can be written as
+            acknowledgement.
+        </div>
+        <div class="VolunteerFAQQuestion">
+            I stay in a hostel and I have a curfew. Will UPSTARS provide me with
+            a letter of excuse?
+        </div>
+        <div class="VolunteerFAQAnswer">
+            Yes. Please provide details to whom the letter should be addressed
+            and the name of your hostel.
+        </div>
 
-        <br><br><br>
+        <br /><br /><br />
     </body>
 </html>
